deployments/lockup/v1.0/core/README.md
# v1.0.0

## Contract Deployed

- SablierV2Comptroller
- SablierV2LockupDynamic
- SablierV2LockupLinear
- SablierV2NFTDescriptor

## Sources

- Commit: [412ec3d](https://github.com/sablier-labs/lockup/commit/412ec3d3998a766507de96afdb26c797d2ae491d)
- Package: [@sablier/v2-core@1.0.0](https://npmjs.com/package/@sablier/v2-core/v/1.0.0)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.19 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 1000   |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

### Mainnets

| Chain           | Salt                          |
| :-------------- | :---------------------------- |
| Arbitrum One    | ChainID 42161, Version 1.0.0  |
| Avalanche       | ChainID 43114, Version 1.0.0  |
| Base            | ChainID 8453, Version 1.0.0   |
| BNB Smart Chain | ChainID 56, Version 1.0.0     |
| Gnosis          | ChainID 100, Version 1.0.0    |
| Mainnet         | ChainID 1, Version 1.0.0      |
| Optimism        | ChainID 10, Version 1.0.0     |
| Polygon         | ChainID 137, Version 1.0.0    |
| Scroll          | ChainID 534352, Version 1.0.0 |

### Testnets

| Chain           | Salt                            |
| :-------------- | :------------------------------ |
| Arbitrum Goerli | ChainID 421613, Version 1.0.0   |
| Goerli          | ChainID 5, Version 1.0.0        |
| Sepolia         | ChainID 11155111, Version 1.0.0 |

# v1.0.1

## Contract Deployed

- SablierV2NFTDescriptor

## Sources

- Commit: [412ec3d](https://github.com/sablier-labs/lockup/commit/412ec3d3998a766507de96afdb26c797d2ae491d)
- Package: [@sablier/v2-core@1.0.1](https://npmjs.com/package/@sablier/v2-core/v/1.0.1)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.19 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 1000   |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

| Chain           | Salt                          |
| :-------------- | :---------------------------- |
| Arbitrum One    | ChainID 42161, Version 1.0.1  |
| Avalanche       | ChainID 43114, Version 1.0.1  |
| Base            | ChainID 8453, Version 1.0.1   |
| BNB Smart Chain | ChainID 56, Version 1.0.1     |
| Gnosis          | ChainID 100, Version 1.0.1    |
| Mainnet         | ChainID 1, Version 1.0.1      |
| Optimism        | ChainID 10, Version 1.0.1     |
| Polygon         | ChainID 137, Version 1.0.1    |
| Scroll          | ChainID 534352, Version 1.0.1 |

### Testnets

| Chain           | Salt                            |
| :-------------- | :------------------------------ |
| Arbitrum Goerli | ChainID 421613, Version 1.0.1   |
| Goerli          | ChainID 5, Version 1.0.1        |
| Sepolia         | ChainID 11155111, Version 1.0.1 |
